--- a/lesson/python/14 Методы списков добавление поиск сортировка.md
+++ b/lesson/python/14 Методы списков добавление поиск сортировка.md
@@ -1,5 +1,17 @@
 # Методы списков добавление поиск сортировка
 
+## 📖 Быстрая навигация по операторам и функциям
+
+- [Добавление элементов в список](#1-добавление-элементов-в-список)
+- [Удаление элементов](#2-удаление-элементов)
+- [Поиск и подсчёт элементов](#3-поиск-и-подсчёт-элементов)
+- [Разворот и сортировка](#4-разворот-и-сортировка)
+- [`min()`, `max()`, `sum()`](#5-min-max-sum)
+- [Мини-тест (частые ловушки) — ответы](#6-мини-тест-частые-ловушки-ответы)
+
+**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+
+
 ## План урока
 - Методы добавления элементов: `append`, `extend`, `insert`
 - Удаление элементов: `remove`, `pop`, `clear`
@@ -390,3 +402,10 @@ reversed(iterable)             -> итератор (list(...) / ''.join(...))
 Функции:
 min/max/sum (+ key=..., start=...)
 ```
+
+
+---
+
+## 📚 Дополнительная информация
+
+_Этот раздел будет дополнен практическими примерами и дополнительной информацией._
