--- a/lesson/python/3 Арифметические операторы приоритет типы.md
+++ b/lesson/python/3 Арифметические операторы приоритет типы.md
@@ -1,5 +1,15 @@
 # Арифметические операторы приоритет типы
 
+## 📖 Быстрая навигация по операторам и функциям
+- [`+`, `-`, `*`, `/`, `//`, `%`, `**`](#2-арифметические-операции)
+- [Переменные вычисления](#3-переменные-и-одноразовые-вычисления)
+- [Неизменяемые типы](#6-неизменяемые-immutable-типы-данных-идея)
+- [Операторы приращения](#7-операторы-приращения-сокращённое-присваивание)
+- [Множественное присваивание](#8-множественное-присваивание)
+- [Преобразование типов](#9-преобразование-типов-type-casting)
+
+**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+
 ---
 
 ## 1) Числа в Python
@@ -264,3 +274,169 @@ int("10"), float("3.14"), str(10), bool(0)
 ZeroDivisionError: деление/остаток на 0
 ValueError: нельзя преобразовать значение (например "abc" -> int/float)
 ```
+
+---
+
+## 📚 Дополнительная информация
+
+### Важные концепции для изучения
+
+#### 1. Особенности деления в Python
+```python
+# Обычное деление ВСЕГДА возвращает float
+print(10 / 5)      # 2.0 (не 2!)
+print(10 / 3)      # 3.3333333333333335
+
+# Целочисленное деление округляет ВНИЗ (floor)
+print(10 // 3)     # 3
+print(-10 // 3)    # -4 (не -3! округление вниз)
+
+# Остаток от деления имеет знак делителя
+print(10 % 3)      # 1
+print(-10 % 3)     # 2 (не -1!)
+print(10 % -3)     # -2
+```
+
+#### 2. Точность вычислений с float
+```python
+# Проблема точности float
+print(0.1 + 0.2)   # 0.30000000000000004 (не 0.3!)
+
+# Решение: округление
+result = round(0.1 + 0.2, 2)  # 0.3
+
+# Или модуль decimal для точных вычислений
+from decimal import Decimal
+x = Decimal('0.1') + Decimal('0.2')
+print(x)  # 0.3
+```
+
+#### 3. Комбинированные операции
+```python
+# Порядок имеет значение!
+x = 10
+x = x + 5 * 2  # x = 10 + 10 = 20
+print(x)
+
+x = 10
+x *= 2 + 3     # x = 10 * 5 = 50 (не 23!)
+print(x)
+
+# Инкремент и декремент (НЕТ ++ и --)
+x = 5
+x += 1  # x = 6 (нет x++ в Python!)
+x -= 1  # x = 5 (нет x-- в Python!)
+```
+
+#### 4. Возведение в степень и корни
+```python
+# Степень
+print(2 ** 3)      # 8
+print(2 ** 0.5)    # 1.4142135623730951 (квадратный корень)
+
+# Корень n-й степени
+print(27 ** (1/3)) # 3.0 (кубический корень)
+print(16 ** 0.25)  # 2.0 (корень 4-й степени)
+
+# Модуль pow() с третьим аргументом (по модулю)
+print(pow(2, 3))      # 8
+print(pow(2, 3, 5))   # 3 (остаток от 8 / 5)
+```
+
+#### 5. Работа с большими числами
+```python
+# Python автоматически работает с очень большими числами
+big = 10 ** 100
+print(big)  # 100 нулей!
+
+# Научная нотация
+x = 1.5e3   # 1500.0
+y = 2e-4    # 0.0002
+print(x, y)
+```
+
+### 💡 Практические примеры
+
+#### Пример 1: Конвертер температур
+```python
+celsius = float(input("Температура в Цельсиях: "))
+
+fahrenheit = celsius * 9/5 + 32
+kelvin = celsius + 273.15
+
+print(f"{celsius}°C = {fahrenheit:.1f}°F")
+print(f"{celsius}°C = {kelvin:.2f}K")
+
+# Пример: 25°C = 77.0°F и 298.15K
+```
+
+#### Пример 2: Калькулятор времени
+```python
+total_seconds = int(input("Введите количество секунд: "))
+
+hours = total_seconds // 3600
+minutes = (total_seconds % 3600) // 60
+seconds = total_seconds % 60
+
+print(f"{total_seconds} секунд = {hours}ч {minutes}м {seconds}с")
+
+# Пример: 3665 секунд = 1ч 1м 5с
+```
+
+#### Пример 3: Разделение суммы на купюры
+```python
+amount = int(input("Сумма для обмена: "))
+
+bills_1000 = amount // 1000
+amount %= 1000
+
+bills_500 = amount // 500
+amount %= 500
+
+bills_100 = amount // 100
+amount %= 100
+
+print(f"1000 руб: {bills_1000} шт")
+print(f"500 руб: {bills_500} шт")
+print(f"100 руб: {bills_100} шт")
+print(f"Остаток: {amount} руб")
+```
+
+### 🚨 Частые ошибки начинающих
+
+**Ошибка 1: Путаница / и //**
+```python
+# ❌ НЕПРАВИЛЬНО
+# age_in_years = total_days / 365  # Дробное число!
+
+# ✅ ПРАВИЛЬНО
+age_in_years = total_days // 365  # Целое количество лет
+```
+
+**Ошибка 2: Забыть про приоритет операций**
+```python
+# ❌ НЕПРАВИЛЬНО
+result = 10 + 5 * 2  # 20, а не 30!
+
+# ✅ ПРАВИЛЬНО
+result = (10 + 5) * 2  # 30
+```
+
+**Ошибка 3: Деление на ноль**
+```python
+# ❌ НЕПРАВИЛЬНО
+# x = 10 / 0  # ZeroDivisionError!
+
+# ✅ ПРАВИЛЬНО
+divisor = int(input("Делитель: "))
+if divisor != 0:
+    result = 10 / divisor
+    print(result)
+else:
+    print("Ошибка: деление на ноль!")
+```
+
+### 📌 Полезные ресурсы
+- [Документация Python: Числовые типы](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex)
+- [Документация: Операторы](https://docs.python.org/3/reference/expressions.html#binary-arithmetic-operations)
+- [PEP 238: Изменение деления](https://peps.python.org/pep-0238/)
