--- a/lesson/python/34 Основы ООП классы объекты методы.md
+++ b/lesson/python/34 Основы ООП классы объекты методы.md
@@ -1,5 +1,17 @@
 # Основы ООП классы объекты методы
 
+## 📖 Быстрая навигация по операторам и функциям
+
+- [Что такое ООП](#1-что-такое-ооп)
+- [ООП vs функциональный подход (коротко)](#2-ооп-vs-функциональный-подход-коротко)
+- [Создание класса](#3-создание-класса)
+- [Магический метод `__init__()`](#4-магический-метод-init)
+- [Поля, методы и атрибуты](#5-поля-методы-и-атрибуты)
+- [`self` — зачем нужен](#6-self-зачем-нужен)
+
+**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+
+
 ## 1) Что такое ООП
 **ООП (объектно-ориентированное программирование)** — подход, где программа строится как взаимодействие **объектов**.  
 Объект объединяет:
@@ -335,3 +347,10 @@ def method(self): ...      # метод (поведение)
 obj.attr                   # доступ к полю
 obj.method()               # вызов метода (self передаётся автоматически)
 ```
+
+
+---
+
+## 📚 Дополнительная информация
+
+_Этот раздел будет дополнен практическими примерами и дополнительной информацией._
