--- a/lesson/python/8 Строки кодировки индексы срезы.md
+++ b/lesson/python/8 Строки кодировки индексы срезы.md
@@ -1,5 +1,17 @@
 # Строки кодировки индексы срезы
 
+## 📖 Быстрая навигация по операторам и функциям
+- [Что такое строка и неизменяемость](#1-что-такое-строка)
+- [Кодировки: ASCII, Unicode, UTF-8](#3-кодировки-ascii-unicode-utf8)
+- [`encode()` и `decode()`](#5-encode-и-decode-строка-байты)
+- [`ord()` и `chr()`](#6-ord-и-chr-символ-код)
+- [Индексация строк](#9-индексация-строк)
+- [Срезы строк](#10-срезы-строк-substring)
+- [Срезы с шагом](#11-срезы-с-шагом-step)
+
+**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+
+
 ## 1) Что такое строка
 **Строка (`str`)** — последовательность символов: текст, который мы обрабатываем в программах.
 
@@ -253,6 +265,70 @@ for ch in encrypted:
         result.append(alphabet[new_idx])
     else:
         result.append(ch)  # пропускаем пробелы/знаки
+
+return ''.join(result)
+```
+
+---
+
+## 📚 Дополнительная информация
+
+### Важные концепции для изучения
+
+#### 1. Индексация и срезы
+```python
+text = "Python"
+print(text[0])      # 'P'
+print(text[-1])     # 'n'
+print(text[1:4])    # 'yth'
+print(text[::-1])   # 'nohtyP' (реверс)
+```
+
+#### 2. Методы строк
+```python
+text = "  Hello World  "
+print(text.strip())     # "Hello World"
+print(text.split())     # ['Hello', 'World']
+print(text.replace("Hello", "Hi"))
+print(text.find("World"))  # индекс
+```
+
+#### 3. Проверки и преобразования
+```python
+text = "123"
+print(text.isdigit())   # True
+print(text.isalpha())   # False
+print(int(text))        # 123
+```
+
+### 💡 Практические примеры
+
+#### Пример 1: Проверка палиндрома
+```python
+text = input("Текст: ").lower().replace(" ", "")
+if text == text[::-1]:
+    print("Палиндром!")
+```
+
+#### Пример 2: Валидация email
+```python
+email = input("Email: ")
+if "@" in email and "." in email:
+    print("Email формат верен")
+```
+
+### 🚨 Частые ошибки
+
+**Ошибка 1: Строки неизменяемы**
+```python
+# ❌ Ошибка
+# s = "hello"
+# s[0] = "H"  # TypeError
+
+# ✅ Правильно
+s = "hello"
+s = "H" + s[1:]  # "Hello"
+```
 print("Расшифрованный текст:", "".join(result))
 ```
 
