--- a/lesson/python/39 Абстрактные классы исключения магия.md
+++ b/lesson/python/39 Абстрактные классы исключения магия.md
@@ -1,5 +1,17 @@
 # Абстрактные классы исключения магия
 
+## 📖 Быстрая навигация по операторам и функциям
+
+- [Абстрактные классы (Abstract Base Classes)](#1-абстрактные-классы-abstract-base-classes)
+- [Документация классов (docstring)](#2-документация-классов-docstring)
+- [Пользовательские исключения (custom exceptions)](#3-пользовательские-исключения-custom-exceptions)
+- [Магические методы (dunder methods)](#4-магические-методы-dunder-methods)
+- [Итерация: `__iter__()` и `__next__()`](#5-итерация-iter-и-next)
+- [Онлайн-платёжные системы: `PaymentProcessor`](#1-онлайн-платёжные-системы-paymentprocessor)
+
+**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+
+
 ## План занятия
 - Абстрактные классы (`abc`, `ABC`, `@abstractmethod`)
 - Документация классов (docstring, `help()`, `__doc__`)
@@ -376,3 +388,10 @@ Custom exceptions:
 - __iter__() -> возвращает итератор
 - __next__() -> следующее значение или StopIteration
 ```
+
+
+---
+
+## 📚 Дополнительная информация
+
+_Этот раздел будет дополнен практическими примерами и дополнительной информацией._
