update4 wiki link

--- a/lesson/python/14 Методы списков добавление поиск сортировка.md
+++ b/lesson/python/14 Методы списков добавление поиск сортировка.md
@@ -2,23 +2,19 @@
 
 ## 📖 Быстрая навигация по операторам и функциям
 
-- [Добавление элементов в список](#1-добавление-элементов-в-список)
-- [Удаление элементов](#2-удаление-элементов)
-- [Поиск и подсчёт элементов](#3-поиск-и-подсчёт-элементов)
-- [Разворот и сортировка](#4-разворот-и-сортировка)
-- [`min()`, `max()`, `sum()`](#5-min-max-sum)
-- [Мини-тест (частые ловушки) — ответы](#6-мини-тест-частые-ловушки-ответы)
+- [[#План урока]](#план-урока)
+- [[#1) Добавление элементов в список]](#1-добавление-элементов-в-список)
+- [[#2) Удаление элементов]](#2-удаление-элементов)
+- [[#3) Поиск и подсчёт элементов]](#3-поиск-и-подсчёт-элементов)
+- [[#4) Разворот и сортировка]](#4-разворот-и-сортировка)
+- [[#5) `min()`, `max()`, `sum()`]](#5-min-max-sum)
+- [[#6) Мини-тест (частые ловушки) — ответы]](#6-мини-тест-частые-ловушки-—-ответы)
+- [[#7) Практическая работа (решения)]](#7-практическая-работа-решения)
+- [[#8) Домашнее задание (решения)]](#8-домашнее-задание-решения)
+- [[#9) Мини-шпаргалка]](#9-мини-шпаргалка)
+- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
 
-**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
-
-
-## План урока
-- Методы добавления элементов: `append`, `extend`, `insert`
-- Удаление элементов: `remove`, `pop`, `clear`
-- Поиск и подсчёт: `index`, `count`
-- Разворот и сортировка: `reverse`, `sort`, функции `reversed`, `sorted`
-- Встроенные функции для коллекций: `min`, `max`, `sum`
-- Практика + домашка (с решениями)
+**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
