--- a/lesson/python/3 Арифметические операторы приоритет типы.md
+++ b/lesson/python/3 Арифметические операторы приоритет типы.md
@@ -1,14 +1,23 @@
 # Арифметические операторы приоритет типы
 
 ## 📖 Быстрая навигация по операторам и функциям
-- [`+`, `-`, `*`, `/`, `//`, `%`, `**`](#2-арифметические-операции)
-- [Переменные вычисления](#3-переменные-и-одноразовые-вычисления)
-- [Неизменяемые типы](#6-неизменяемые-immutable-типы-данных-идея)
-- [Операторы приращения](#7-операторы-приращения-сокращённое-присваивание)
-- [Множественное присваивание](#8-множественное-присваивание)
-- [Преобразование типов](#9-преобразование-типов-type-casting)
 
-**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+- [[#1) Числа в Python]](#1-числа-в-python)
+- [[#2) Арифметические операции]](#2-арифметические-операции)
+- [[#3) Переменные и “одноразовые” вычисления]](#3-переменные-и-“одноразовые”-вычисления)
+- [[#4) Ошибка `ZeroDivisionError`]](#4-ошибка-zerodivisionerror)
+- [[#5) Приоритет операций (как в математике)]](#5-приоритет-операций-как-в-математике)
+- [[#6) Неизменяемые (immutable) типы данных — идея]](#6-неизменяемые-immutable-типы-данных-—-идея)
+- [[#7) Операторы приращения (сокращённое присваивание)]](#7-операторы-приращения-сокращённое-присваивание)
+- [[#8) Множественное присваивание]](#8-множественное-присваивание)
+- [[#9) Преобразование типов (Type Casting)]](#9-преобразование-типов-type-casting)
+- [[#10) Ошибка `ValueError`]](#10-ошибка-valueerror)
+- [[#11) Практическая работа (из урока) — решения]](#11-практическая-работа-из-урока-—-решения)
+- [[#12) Домашнее задание — подсказки решений]](#12-домашнее-задание-—-подсказки-решений)
+- [[#13) Мини-шпаргалка]](#13-мини-шпаргалка)
+- [[#Дополнительная информация]](#дополнительная-информация)
+
+**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
@@ -277,7 +286,7 @@ ValueError: нельзя преобразовать значение (напри
 
 ---
 
-## 📚 Дополнительная информация
+## Дополнительная информация
 
 ### Важные концепции для изучения
 
