--- a/lesson/python/34 Основы ООП классы объекты методы.md
+++ b/lesson/python/34 Основы ООП классы объекты методы.md
@@ -2,25 +2,27 @@
 
 ## 📖 Быстрая навигация по операторам и функциям
 
-- [Что такое ООП](#1-что-такое-ооп)
-- [ООП vs функциональный подход (коротко)](#2-ооп-vs-функциональный-подход-коротко)
-- [Создание класса](#3-создание-класса)
-- [Магический метод `__init__()`](#4-магический-метод-init)
-- [Поля, методы и атрибуты](#5-поля-методы-и-атрибуты)
-- [`self` — зачем нужен](#6-self-зачем-нужен)
+- [[#1) Что такое ООП]](#1-что-такое-ооп)
+- [[#2) ООП vs функциональный подход (коротко)]](#2-ооп-vs-функциональный-подход-коротко)
+- [[#3) Создание класса]](#3-создание-класса)
+- [[#4) Магический метод `__init__()`]](#4-магический-метод-init)
+- [[#5) Поля, методы и атрибуты]](#5-поля-методы-и-атрибуты)
+- [[#6) `self` — зачем нужен]](#6-self-—-зачем-нужен)
+- [[#7) Создание объекта]](#7-создание-объекта)
+- [[#8) Доступ к полям объекта и изменение]](#8-доступ-к-полям-объекта-и-изменение)
+- [[#9) Методы класса]](#9-методы-класса)
+- [[#10.1 Верные утверждения об ООП]](#101-верные-утверждения-об-ооп)
+- [[#10.2 Что делает `__init__`?]](#102-что-делает-init)
+- [[#10.3 Сопоставление понятий]](#103-сопоставление-понятий)
+- [[#10.4 Сопоставление элементов кода]](#104-сопоставление-элементов-кода)
+- [[#11.1 Класс `User`]](#111-класс-user)
+- [[#11.2 Класс `Product`]](#112-класс-product)
+- [[#12.1 Класс `Rectangle`]](#121-класс-rectangle)
+- [[#12.2 Класс `Counter`]](#122-класс-counter)
+- [[#Мини-шпаргалка урока]](#мини-шпаргалка-урока)
+- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
 
-**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
-
-
-## 1) Что такое ООП
-**ООП (объектно-ориентированное программирование)** — подход, где программа строится как взаимодействие **объектов**.  
-Объект объединяет:
-- **поля** (данные/состояние)
-- **методы** (поведение)
-
-Ключевые термины:
-- **Класс** — шаблон (чертёж), по которому создаются объекты.
-- **Объект** — конкретный экземпляр класса со своим состоянием.
+**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
