--- a/lesson/python/39 Абстрактные классы исключения магия.md
+++ b/lesson/python/39 Абстрактные классы исключения магия.md
@@ -2,22 +2,23 @@
 
 ## 📖 Быстрая навигация по операторам и функциям
 
-- [Абстрактные классы (Abstract Base Classes)](#1-абстрактные-классы-abstract-base-classes)
-- [Документация классов (docstring)](#2-документация-классов-docstring)
-- [Пользовательские исключения (custom exceptions)](#3-пользовательские-исключения-custom-exceptions)
-- [Магические методы (dunder methods)](#4-магические-методы-dunder-methods)
-- [Итерация: `__iter__()` и `__next__()`](#5-итерация-iter-и-next)
-- [Онлайн-платёжные системы: `PaymentProcessor`](#1-онлайн-платёжные-системы-paymentprocessor)
+- [[#План занятия]](#план-занятия)
+- [[#1) Абстрактные классы (Abstract Base Classes)]](#1-абстрактные-классы-abstract-base-classes)
+- [[#2) Документация классов (docstring)]](#2-документация-классов-docstring)
+- [[#3) Пользовательские исключения (custom exceptions)]](#3-пользовательские-исключения-custom-exceptions)
+- [[#4) Магические методы (dunder methods)]](#4-магические-методы-dunder-methods)
+- [[#5) Итерация: `__iter__()` и `__next__()`]](#5-итерация-iter-и-next)
+- [[#Задания 1 (абстрактные классы)]](#задания-1-абстрактные-классы)
+- [[#Задания 2 (пользовательские исключения)]](#задания-2-пользовательские-исключения)
+- [[#Задания 3 (итерация)]](#задания-3-итерация)
+- [[#1) Онлайн-платёжные системы: `PaymentProcessor`]](#1-онлайн-платёжные-системы-paymentprocessor)
+- [[#2) Проверка платежей: `InvalidPaymentError`]](#2-проверка-платежей-invalidpaymenterror)
+- [[#ДЗ 1) Фигуры и площади: `Shape`, `Circle`, `Rectangle`]](#дз-1-фигуры-и-площади-shape-circle-rectangle)
+- [[#ДЗ 2) Проверка размеров: `InvalidSizeError`]](#дз-2-проверка-размеров-invalidsizeerror)
+- [[#Мини-шпаргалка урока]](#мини-шпаргалка-урока)
+- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
 
-**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
-
-
-## План занятия
-- Абстрактные классы (`abc`, `ABC`, `@abstractmethod`)
-- Документация классов (docstring, `help()`, `__doc__`)
-- Пользовательские исключения (custom exceptions)
-- Магические методы (dunder methods)
-- Магические методы итерации (`__iter__`, `__next__`, `StopIteration`)
+**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
