--- a/lesson/python/8 Строки кодировки индексы срезы.md
+++ b/lesson/python/8 Строки кодировки индексы срезы.md
@@ -1,16 +1,26 @@
 # Строки кодировки индексы срезы
 
 ## 📖 Быстрая навигация по операторам и функциям
-- [Что такое строка и неизменяемость](#1-что-такое-строка)
-- [Кодировки: ASCII, Unicode, UTF-8](#3-кодировки-ascii-unicode-utf8)
-- [`encode()` и `decode()`](#5-encode-и-decode-строка-байты)
-- [`ord()` и `chr()`](#6-ord-и-chr-символ-код)
-- [Индексация строк](#9-индексация-строк)
-- [Срезы строк](#10-срезы-строк-substring)
-- [Срезы с шагом](#11-срезы-с-шагом-step)
 
-**[📚 Дополнительная информация и примеры](#дополнительная-информация)**
+- [[#1) Что такое строка]](#1-что-такое-строка)
+- [[#2) Неизменяемость строк (immutable)]](#2-неизменяемость-строк-immutable)
+- [[#3) Кодировки: ASCII, Unicode, UTF‑8]](#3-кодировки-ascii-unicode-utf‑8)
+- [[#4) Метод vs функция (важное различие)]](#4-метод-vs-функция-важное-различие)
+- [[#5) `encode()` и `decode()`: строка ↔ байты]](#5-encode-и-decode-строка-↔-байты)
+- [[#6) `ord()` и `chr()` (символ ↔ код)]](#6-ord-и-chr-символ-↔-код)
+- [[#7) Сравнение строк (лексикографически)]](#7-сравнение-строк-лексикографически)
+- [[#8) `len()` — длина строки]](#8-len-—-длина-строки)
+- [[#9) Индексация строк]](#9-индексация-строк)
+- [[#10) Срезы строк (substring)]](#10-срезы-строк-substring)
+- [[#11) Срезы с шагом (step)]](#11-срезы-с-шагом-step)
+- [[#12) Оператор принадлежности `in` / `not in`]](#12-оператор-принадлежности-in-not-in)
+- [[#13) Практика (готовые решения)]](#13-практика-готовые-решения)
+- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
+- [[#14) Домашка (шаблон)]](#14-домашка-шаблон)
 
+**[[#📚 Дополнительная информация]](#дополнительная-информация)**
+
+---
 
 ## 1) Что такое строка
 **Строка (`str`)** — последовательность символов: текст, который мы обрабатываем в программах.
