update4 wiki link - 25

--- a/lesson/python/3 Арифметические операторы приоритет типы.md
+++ b/lesson/python/3 Арифметические операторы приоритет типы.md
@@ -17,7 +17,7 @@
 - [[#13) Мини-шпаргалка]](#13-мини-шпаргалка)
 - [[#Дополнительная информация]](#дополнительная-информация)
 
-**[[#📚 Дополнительная информация]](#дополнительная-информация)**
+**[[#Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
