--- a/lesson/python/34 Основы ООП классы объекты методы.md
+++ b/lesson/python/34 Основы ООП классы объекты методы.md
@@ -20,9 +20,8 @@
 - [[#12.1 Класс `Rectangle`]](#121-класс-rectangle)
 - [[#12.2 Класс `Counter`]](#122-класс-counter)
 - [[#Мини-шпаргалка урока]](#мини-шпаргалка-урока)
-- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
+- [[#Дополнительная информация]](#дополнительная-информация)
 
-**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
@@ -353,6 +352,6 @@ obj.method()               # вызов метода (self передаётся 
 
 ---
 
-## 📚 Дополнительная информация
+## Дополнительная информация
 
 _Этот раздел будет дополнен практическими примерами и дополнительной информацией._
