--- a/lesson/python/39 Абстрактные классы исключения магия.md
+++ b/lesson/python/39 Абстрактные классы исключения магия.md
@@ -16,9 +16,8 @@
 - [[#ДЗ 1) Фигуры и площади: `Shape`, `Circle`, `Rectangle`]](#дз-1-фигуры-и-площади-shape-circle-rectangle)
 - [[#ДЗ 2) Проверка размеров: `InvalidSizeError`]](#дз-2-проверка-размеров-invalidsizeerror)
 - [[#Мини-шпаргалка урока]](#мини-шпаргалка-урока)
-- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
+- [[#Дополнительная информация]](#дополнительная-информация)
 
-**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
@@ -393,6 +392,6 @@ Custom exceptions:
 
 ---
 
-## 📚 Дополнительная информация
+## Дополнительная информация
 
 _Этот раздел будет дополнен практическими примерами и дополнительной информацией._
