--- a/lesson/python/14 Методы списков добавление поиск сортировка.md
+++ b/lesson/python/14 Методы списков добавление поиск сортировка.md
@@ -12,9 +12,8 @@
 - [[#7) Практическая работа (решения)]](#7-практическая-работа-решения)
 - [[#8) Домашнее задание (решения)]](#8-домашнее-задание-решения)
 - [[#9) Мини-шпаргалка]](#9-мини-шпаргалка)
-- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
+- [[#Дополнительная информация]](#дополнительная-информация)
 
-**[[#📚 Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
@@ -402,6 +401,289 @@ min/max/sum (+ key=..., start=...)
 
 ---
 
-## 📚 Дополнительная информация
+## Дополнительная информация
 
-_Этот раздел будет дополнен практическими примерами и дополнительной информацией._
+### Важные концепции для изучения
+
+#### 1. Сложность операций со списками (Big O)
+```python
+# O(1) - константное время
+lst = [1, 2, 3, 4, 5]
+lst.append(6)      # Быстро
+item = lst[2]      # Быстро
+lst[-1] = 10       # Быстро
+
+# O(n) - линейное время
+lst.insert(0, 0)   # Медленно - сдвигает все элементы
+lst.remove(3)      # Медленно - ищет элемент
+3 in lst           # Медленно - проходит по всем элементам
+lst.index(4)       # Медленно - ищет элемент
+
+# O(n log n) - для сортировки
+lst.sort()         # Относительно быстро
+
+# Практический вывод: избегайте частых вставок в начало
+# Используйте collections.deque для операций с обеих сторон
+from collections import deque
+d = deque([1, 2, 3])
+d.appendleft(0)    # O(1) - быстро!
+```
+
+#### 2. Списковые срезы для модификации
+```python
+# Замена части списка
+numbers = [1, 2, 3, 4, 5]
+numbers[1:3] = [20, 30]  # [1, 20, 30, 4, 5]
+
+# Вставка элементов без insert
+numbers[2:2] = [25, 26]  # [1, 20, 25, 26, 30, 4, 5]
+
+# Удаление части списка
+numbers[1:4] = []  # [1, 30, 4, 5]
+
+# Замена на разное количество элементов
+numbers[1:2] = [100, 200, 300]  # [1, 100, 200, 300, 4, 5]
+
+# Реверс списка на месте
+numbers[:] = numbers[::-1]  # [5, 4, 300, 200, 100, 1]
+
+# Очистка списка через срез
+numbers[:] = []  # []
+```
+
+#### 3. Продвинутая сортировка
+```python
+# Сортировка с несколькими ключами
+students = [
+    {'name': 'Алиса', 'age': 25, 'grade': 85},
+    {'name': 'Боб', 'age': 23, 'grade': 90},
+    {'name': 'Виктор', 'age': 25, 'grade': 80}
+]
+
+# Сортировка по возрасту, затем по оценке (убывание)
+students.sort(key=lambda s: (s['age'], -s['grade']))
+for s in students:
+    print(f"{s['name']}: возраст {s['age']}, оценка {s['grade']}")
+
+# Сортировка строк без учета регистра
+words = ['Banana', 'apple', 'Cherry', 'date']
+words.sort(key=str.lower)
+print(words)  # ['apple', 'Banana', 'Cherry', 'date']
+
+# Стабильная сортировка (сохраняет порядок равных элементов)
+data = [(1, 'b'), (1, 'a'), (2, 'c')]
+data.sort(key=lambda x: x[0])  # Порядок (1, 'b') и (1, 'a') сохранится
+```
+
+#### 4. Методы для поиска всех вхождений
+```python
+# Найти все индексы элемента
+def find_all(lst, value):
+    """Возвращает список всех индексов, где встречается value"""
+    return [i for i, x in enumerate(lst) if x == value]
+
+numbers = [1, 2, 3, 2, 4, 2, 5]
+indices = find_all(numbers, 2)
+print(indices)  # [1, 3, 5]
+
+# Подсчет вхождений с условием
+def count_if(lst, condition):
+    """Подсчитывает элементы, удовлетворяющие условию"""
+    return sum(1 for x in lst if condition(x))
+
+numbers = [1, 5, 10, 15, 20, 25]
+count = count_if(numbers, lambda x: x > 10)
+print(count)  # 3
+
+# Найти первый элемент по условию
+def find_first(lst, condition):
+    """Возвращает первый элемент, удовлетворяющий условию"""
+    for item in lst:
+        if condition(item):
+            return item
+    return None
+
+first_even = find_first([1, 3, 5, 8, 9], lambda x: x % 2 == 0)
+print(first_even)  # 8
+```
+
+### 💡 Практические примеры
+
+#### Пример 1: Удаление дубликатов с сохранением порядка
+```python
+def remove_duplicates(lst):
+    """Удаляет дубликаты, сохраняя порядок первых вхождений"""
+    seen = set()
+    result = []
+    for item in lst:
+        if item not in seen:
+            seen.add(item)
+            result.append(item)
+    return result
+
+numbers = [1, 2, 3, 2, 4, 1, 5, 3]
+unique = remove_duplicates(numbers)
+print(unique)  # [1, 2, 3, 4, 5]
+
+# Альтернативный способ через dict (Python 3.7+)
+unique = list(dict.fromkeys(numbers))
+print(unique)  # [1, 2, 3, 4, 5]
+```
+
+#### Пример 2: Группировка элементов
+```python
+def group_by(lst, key_func):
+    """Группирует элементы списка по результату key_func"""
+    groups = {}
+    for item in lst:
+        key = key_func(item)
+        if key not in groups:
+            groups[key] = []
+        groups[key].append(item)
+    return groups
+
+# Группировка чисел по четности
+numbers = [1, 2, 3, 4, 5, 6, 7, 8]
+grouped = group_by(numbers, lambda x: 'even' if x % 2 == 0 else 'odd')
+print(grouped)
+# {'odd': [1, 3, 5, 7], 'even': [2, 4, 6, 8]}
+
+# Группировка слов по длине
+words = ['cat', 'dog', 'bird', 'elephant', 'ant']
+by_length = group_by(words, len)
+print(by_length)
+# {3: ['cat', 'dog', 'ant'], 4: ['bird'], 8: ['elephant']}
+```
+
+#### Пример 3: Слияние отсортированных списков
+```python
+def merge_sorted(list1, list2):
+    """Объединяет два отсортированных списка в один отсортированный"""
+    result = []
+    i, j = 0, 0
+    
+    while i < len(list1) and j < len(list2):
+        if list1[i] <= list2[j]:
+            result.append(list1[i])
+            i += 1
+        else:
+            result.append(list2[j])
+            j += 1
+    
+    # Добавляем оставшиеся элементы
+    result.extend(list1[i:])
+    result.extend(list2[j:])
+    
+    return result
+
+a = [1, 3, 5, 7]
+b = [2, 4, 6, 8]
+merged = merge_sorted(a, b)
+print(merged)  # [1, 2, 3, 4, 5, 6, 7, 8]
+```
+
+#### Пример 4: Циклический сдвиг списка
+```python
+def rotate(lst, n):
+    """Циклически сдвигает список на n позиций вправо"""
+    if not lst:
+        return lst
+    n = n % len(lst)  # Обработка больших n
+    return lst[-n:] + lst[:-n]
+
+numbers = [1, 2, 3, 4, 5]
+print(rotate(numbers, 2))   # [4, 5, 1, 2, 3]
+print(rotate(numbers, -1))  # [2, 3, 4, 5, 1] (влево)
+print(rotate(numbers, 7))   # [4, 5, 1, 2, 3] (7 % 5 = 2)
+```
+
+### 🚨 Частые ошибки
+
+**Ошибка 1: Изменение списка во время итерации**
+```python
+# ❌ НЕПРАВИЛЬНО - пропускает элементы
+numbers = [1, 2, 3, 4, 5, 6]
+for num in numbers:
+    if num % 2 == 0:
+        numbers.remove(num)
+print(numbers)  # [1, 3, 5, 6] - 6 не удалился!
+
+# ✅ ПРАВИЛЬНО - итерация по копии
+numbers = [1, 2, 3, 4, 5, 6]
+for num in numbers[:]:
+    if num % 2 == 0:
+        numbers.remove(num)
+print(numbers)  # [1, 3, 5]
+
+# ✅ ЕЩЕ ЛУЧШЕ - list comprehension
+numbers = [1, 2, 3, 4, 5, 6]
+numbers = [num for num in numbers if num % 2 != 0]
+print(numbers)  # [1, 3, 5]
+```
+
+**Ошибка 2: Неправильное использование sort() vs sorted()**
+```python
+numbers = [3, 1, 4, 1, 5]
+
+# ❌ НЕПРАВИЛЬНО - sort() возвращает None
+# sorted_nums = numbers.sort()
+# print(sorted_nums)  # None
+
+# ✅ ПРАВИЛЬНО - sort() изменяет на месте
+numbers.sort()
+print(numbers)  # [1, 1, 3, 4, 5]
+
+# ✅ ИЛИ используйте sorted() для нового списка
+numbers = [3, 1, 4, 1, 5]
+sorted_nums = sorted(numbers)
+print(sorted_nums)  # [1, 1, 3, 4, 5]
+print(numbers)      # [3, 1, 4, 1, 5] - оригинал не изменился
+```
+
+**Ошибка 3: Путаница с remove() и pop()**
+```python
+numbers = [1, 2, 3, 4, 5]
+
+# remove() удаляет по значению
+numbers.remove(3)
+print(numbers)  # [1, 2, 4, 5]
+
+# pop() удаляет по индексу и возвращает значение
+numbers = [1, 2, 3, 4, 5]
+value = numbers.pop(2)
+print(value)    # 3
+print(numbers)  # [1, 2, 4, 5]
+
+# ❌ ОШИБКА - remove() с несуществующим элементом
+# numbers.remove(10)  # ValueError!
+
+# ✅ ПРАВИЛЬНО - проверка перед удалением
+if 10 in numbers:
+    numbers.remove(10)
+```
+
+**Ошибка 4: Множественное добавление изменяемых объектов**
+```python
+# ❌ НЕПРАВИЛЬНО - все элементы ссылаются на один список
+matrix = [[]] * 3
+matrix[0].append(1)
+print(matrix)  # [[1], [1], [1]] - все изменились!
+
+# ✅ ПРАВИЛЬНО - создаем отдельные списки
+matrix = [[] for _ in range(3)]
+matrix[0].append(1)
+print(matrix)  # [[1], [], []]
+
+# Аналогично для других значений
+# ❌
+lists = [[0] * 3] * 3
+# ✅
+lists = [[0] * 3 for _ in range(3)]
+```
+
+### 📌 Полезные ресурсы
+- [Документация: списки](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)
+- [Документация: методы списков](https://docs.python.org/3/library/stdtypes.html#mutable-sequence-types)
+- [Документация: sorted()](https://docs.python.org/3/library/functions.html#sorted)
+- [Time Complexity - Python Wiki](https://wiki.python.org/moin/TimeComplexity)
+- [Sorting HOW TO](https://docs.python.org/3/howto/sorting.html)
