--- a/lesson/python/8 Строки кодировки индексы срезы.md
+++ b/lesson/python/8 Строки кодировки индексы срезы.md
@@ -15,10 +15,10 @@
 - [[#11) Срезы с шагом (step)]](#11-срезы-с-шагом-step)
 - [[#12) Оператор принадлежности `in` / `not in`]](#12-оператор-принадлежности-in-not-in)
 - [[#13) Практика (готовые решения)]](#13-практика-готовые-решения)
-- [[#📚 Дополнительная информация]](#📚-дополнительная-информация)
+- [[#Дополнительная информация]](#дополнительная-информация)
 - [[#14) Домашка (шаблон)]](#14-домашка-шаблон)
 
-**[[#📚 Дополнительная информация]](#дополнительная-информация)**
+**[[#Дополнительная информация]](#дополнительная-информация)**
 
 ---
 
@@ -281,7 +281,7 @@ return ''.join(result)
 
 ---
 
-## 📚 Дополнительная информация
+## Дополнительная информация
 
 ### Важные концепции для изучения
 
