--- a/lesson/linux/06 - Переменные и управление процессами.md
+++ b/lesson/linux/06 - Переменные и управление процессами.md
@@ -216,3 +216,94 @@ ps -ef | grep ssh
 - Удалить переменную: `unset NAME`
 - Процессы: `top`, `ps -ef`, `ps aux`
 - Завершить: `kill PID`, принудительно: `kill -9 PID`
+
+
+---
+
+## Дополнительные материалы
+
+### Продвинутая работа с переменными
+
+#### Манипуляции со строками
+```bash
+VAR="Hello World"
+echo ${VAR:0:5}          # Hello (подстрока)
+echo ${#VAR}             # 11 (длина строки)
+echo ${VAR/World/Bash}   # Hello Bash (замена)
+```
+
+#### Значения по умолчанию
+```bash
+echo ${VAR:-default}     # Если VAR пуста, вернуть "default"
+echo ${VAR:=default}     # Если VAR пуста, установить и вернуть
+```
+
+#### Массивы
+```bash
+ARRAY=("apple" "banana" "cherry")
+echo ${ARRAY[0]}         # apple
+echo ${ARRAY[@]}         # Все элементы
+echo ${#ARRAY[@]}        # Количество элементов
+```
+
+### Специальные переменные
+
+```bash
+$0      # Имя скрипта
+$1-$9   # Позиционные параметры
+$#      # Количество аргументов
+$@      # Все аргументы
+$?      # Код возврата последней команды
+$$      # PID текущего процесса
+```
+
+### Расширенное управление процессами
+
+#### Приоритеты (nice и renice)
+```bash
+nice -n 10 command       # Запустить с низким приоритетом
+renice -n 5 -p PID       # Изменить приоритет
+```
+
+#### Сигналы
+```bash
+kill -l                  # Список всех сигналов
+kill -SIGTERM PID        # Вежливое завершение  
+kill -9 PID              # Принудительное
+pkill process_name       # Завершить по имени
+```
+
+#### Управление заданиями
+```bash
+command &                # Запустить в фоне
+jobs                     # Просмотр фоновых заданий
+fg %1                    # Перевести задание 1 на передний план
+bg %1                    # Продолжить в фоне
+```
+
+### systemd и сервисы
+
+```bash
+sudo systemctl start service
+sudo systemctl stop service
+sudo systemctl restart service
+sudo systemctl status service
+sudo systemctl enable service   # Автозапуск
+
+journalctl -u service -f        # Логи сервиса
+```
+
+### Мониторинг ресурсов
+
+```bash
+htop                     # Интерактивный монитор (нужно установить)
+iotop                    # I/O мониторинг
+free -h                  # Использование памяти
+ps aux --sort=-%mem | head -10  # Топ по памяти
+```
+
+### Ресурсы
+
+- [Advanced Bash-Scripting Guide: Variables](https://tldp.org/LDP/abs/html/variables.html)
+- [htop](https://htop.dev/) — интерактивный монитор
+- [glances](https://nicolargo.github.io/glances/) — мониторинг системы
