--- a/lesson/linux/11 - Скрипты - практика.md
+++ b/lesson/linux/11 - Скрипты - практика.md
@@ -268,3 +268,120 @@ awk -F ':' '{print $1, $6}' /etc/passwd
 
 find /opt/ВАШАГРУППА -type f -name "*.sh" -exec chmod +x {} \;
 ```
+
+
+---
+
+## Дополнительные материалы
+
+### Обработка ошибок в скриптах
+
+```bash
+#!/bin/bash
+
+# Выйти при ошибке
+set -e
+
+# Выйти при использовании неопределенной переменной
+set -u
+
+# Показать команды при выполнении (debugging)
+set -x
+
+# Комбинация
+set -euo pipefail
+
+# Обработка ошибок вручную
+command || { echo "Error occurred"; exit 1; }
+
+# Trap для очистки
+trap "rm -f /tmp/tempfile; echo 'Cleanup done'" EXIT
+```
+
+### Логирование
+
+```bash
+#!/bin/bash
+
+LOG_FILE="/var/log/myscript.log"
+
+log() {
+    echo "[$(date '+%Y-%m-%d %H:%M:%S')] $1" | tee -a "$LOG_FILE"
+}
+
+log "Script started"
+log "Processing data..."
+log "Script finished"
+```
+
+### Аргументы командной строки
+
+```bash
+#!/bin/bash
+
+while getopts "f:d:h" opt; do
+    case $opt in
+        f) FILE="$OPTARG" ;;
+        d) DIR="$OPTARG" ;;
+        h) echo "Usage: $0 -f file -d directory"; exit 0 ;;
+        \?) echo "Invalid option"; exit 1 ;;
+    esac
+done
+
+echo "File: $FILE"
+echo "Directory: $DIR"
+```
+
+### Параллельное выполнение
+
+```bash
+#!/bin/bash
+
+# Запустить в фоне
+command1 &
+command2 &
+command3 &
+
+# Дождаться завершения всех
+wait
+
+echo "All commands finished"
+```
+
+### Работа с JSON в bash
+
+```bash
+# Установить jq
+sudo apt install jq
+
+# Парсинг JSON
+echo '{"name":"John","age":30}' | jq '.name'
+
+# Из файла
+cat data.json | jq '.items[] | .name'
+```
+
+### Меню в bash
+
+```bash
+#!/bin/bash
+
+PS3="Select option: "
+options=("Option 1" "Option 2" "Option 3" "Quit")
+
+select opt in "${options[@]}"; do
+    case $opt in
+        "Option 1") echo "You chose option 1" ;;
+        "Option 2") echo "You chose option 2" ;;
+        "Option 3") echo "You chose option 3" ;;
+        "Quit") break ;;
+        *) echo "Invalid option" ;;
+    esac
+done
+```
+
+### Ресурсы
+
+- [ShellCheck](https://www.shellcheck.net/) — анализатор bash-скриптов
+- [Bash Hackers Wiki](https://wiki.bash-hackers.org/)
+- [Google Shell Style Guide](https://google.github.io/styleguide/shellguide.html)
